--- a/Week 6/page2.html
+++ b/Week 6/page2.html
@@ -5,7 +5,7 @@
   <body>
  
     <!--filler image-->
-    <image src="Illustration2.png" width=100/>
+    <image src="Illustration2.png" width=500/>
     
     <p> 
      Hmm... It seems like he is neither a 
@@ -21,15 +21,17 @@
     Well, what should we do now?
       </p>
   <form>
-    <input type="radio" name="selection" value="blue">Pat the sweet baby<br>
-<input type="radio" name="selection" value="red">Give him a treat<br>
-<input type="radio" name="selection" value="green">Stare deep into his orb<br>
-<input type="radio" name="selection" value="purple">Call him a "good boy"
+    <input type="radio" name="selection">Pat the sweet baby<br>
+<input type="radio" name="selection">Give him a treat<br>
+<input type="radio" name="selection">Stare deep into his orb<br>
+<input type="radio" name="selection">Call him a "good boy"
     <br>
     </br>
-    <button>
-      SUBMIT
-    <a href="link.html"> </a>
-    </button>
+  
+      
+    <a href="page3.html">
+      <button> SUBMIT </button>
+     </a>
+  
   </body>
 </html>
