--- a/Week 6/homepage.html
+++ b/Week 6/homepage.html
@@ -7,7 +7,7 @@
    <br />
       <h6> what the frick is he???</h6>
     <!--filler image-->
-    <image src="https://images.unsplash.com/photo-1706766008345-c92c0195d7ef?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDkxNjMwNTF8&ixlib=rb-4.0.3&q=85" width=100/>
+    <image src="Illustration.png" width=100/>
     
     <p> 
       <h8>He looks like a...</h8>
