--- a/Week 6/homepage.html
+++ b/Week 6/homepage.html
@@ -1,13 +1,13 @@
 <html>
   <title>
-  <head> Index </head>
+  <head> Home </head>
   </title>
   <body>
     <h1>FUNKY LITTLE CREATURE!!!</<h1>
    <br />
       <h6> what the frick is he???</h6>
     <!--filler image-->
-    <image src="Illustration.png" width=100/>
+    <image src="Illustration.png" width=500/>
     
     <p> 
       <h8>He looks like a...</h8>
