--- a/Week 6/page2.html
+++ b/Week 6/page2.html
@@ -29,9 +29,7 @@
     </br>
   
       
-    <a href="page3.html">
-      <button> SUBMIT </button>
-     </a>
+    <button onlick= "window.location.href = 'page3.html';">SUBMIT</button>
 
       
   </body>
