--- a/Week 6/page2.html
+++ b/Week 6/page2.html
@@ -1,7 +1,10 @@
 <html>
-  <title>
-  <head> Two </head>
+  <head>  
+    <title>
+  Two 
   </title>
+  </head>
+
   <body>
  
     <!--filler image-->
@@ -29,7 +32,7 @@
     </br>
   
       
-    <button onlick= "window.location.href = 'page3.html';">SUBMIT</button>
+    <button onclick= "window.location.href = 'page3.html';">SUBMIT</button>
 
       
   </body>
