--- a/Week 6/homepage.html
+++ b/Week 6/homepage.html
@@ -1,7 +1,9 @@
 <html>
-  <title>
-  <head> Home </head>
-  </title>
+  <head>
+    <title>
+      Home
+    </title>
+  </head>
   <body>
     <h1>FUNKY LITTLE CREATURE!!!</<h1>
    <br />
