--- a/Week 6/page3.html
+++ b/Week 6/page3.html
@@ -1,5 +1,22 @@
 <html>
+    <head>
+        <title>
+            Eye.
+        </title>
+        <link rel=stylesheet href="../Week 7/mainstyle.css">
+        <style>
+            span{
+                background-color: black;
+                -webkit-text-stroke-color: darkgray;
+                -webkit-text-fill-color: darkgray;
+                text-decoration: overline underline;
+            }
+        </style>
+    </head>
     <body>
-        <img src="image.jpeg"> </img>
+        <img src="Illustration3.png"> </img>
+        <span>
+        <a href="../Week 7/begin.html" style="text-decoration:underline overline">Oh my.</a>
+        </span>
     </body>
 </html>
