--- a/Week 6/page3.html
+++ b/Week 6/page3.html
@@ -11,6 +11,9 @@
                 -webkit-text-fill-color: darkgray;
                 text-decoration: overline underline;
             }
+            image{
+                width: 500;
+            }
         </style>
     </head>
     <body>
