--- a/Week 6/page3.html
+++ b/Week 6/page3.html
@@ -19,7 +19,7 @@
     <body>
         <img src="Illustration3.png"> </img>
         <span>
-        <a href="../Week 7/begin.html" style="text-decoration:underline overline">Oh my.</a>
+        <a href="../Week 7/anotherone.html" style="text-decoration:underline overline">Oh my.</a>
         </span>
     </body>
 </html>
