--- a/Week 6/page3.html
+++ b/Week 6/page3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Eye.
+            Four.
         </title>
         <link rel=stylesheet href="../Week 7/mainstyle.css">
         <style>
@@ -10,6 +10,10 @@
                 -webkit-text-stroke-color: darkgray;
                 -webkit-text-fill-color: darkgray;
                 text-decoration: overline underline;
+            }
+            image{
+                width: 500;
+
             }
         </style>
     </head>
