Edits and Homework

--- a/Week 6/homepage.html
+++ b/Week 6/homepage.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <title>
-      Home
+      Two.
     </title>
-  </head>
+    <link rel="stylesheet" href="../Week 7/mainstyle.css">
+    </head>
   <body>
     <h1>FUNKY LITTLE CREATURE!!!</<h1>
    <br />
@@ -22,6 +23,6 @@
       </p>
     <br />
     <!--Filler link-->
-    <a href="page2.html">Of course you do. </a>
+    <a href="page2.html" style="text-decoration: none;">Of course you do. </a>
   </body>
 </html>
