--- a/Week 6/page2.html
+++ b/Week 6/page2.html
@@ -1,10 +1,10 @@
 <html>
-  <head>  
+  <head>
     <title>
-  Two 
-  </title>
+      One.
+    </title>
+    <link  rel="stylesheet" href="../Week 7/mainstyle.css">
   </head>
-
   <body>
  
     <!--filler image-->
@@ -23,7 +23,7 @@
     </br>
     Well, what should we do now?
       </p>
-
+  <form>
     <input type="radio" name="selection">Pat the sweet baby<br>
 <input type="radio" name="selection">Give him a treat<br>
 <input type="radio" name="selection">Stare deep into his orb<br>
@@ -32,8 +32,9 @@
     </br>
   
       
-    <button onclick= "window.location.href = 'page3.html';">SUBMIT</button>
-
-      
+    <a href="page3.html">
+      <button> SUBMIT </button>
+     </a>
+  
   </body>
 </html>
