--- a/Week 8/ifstatements.html
+++ b/Week 8/ifstatements.html
@@ -8,7 +8,15 @@
             function printQuestion(){
                 document.getElementById("Question").innerHTML = "Contact:";
             }
-           
+            function checkAnswer(){
+                var answer = document.getElementById("txtAnswer").value;
+                document.getElementById("txtAnswer").innerHTML = "We appreciate your response.";
+                if ("txtAnswer" == 10){
+                    document.getElementById("finalResult").innerHTML = <a href = "newpage.html">Thank you.</a>
+                }
+                else 
+                    document.getElementById("finalResult").innerHTML = "If only the creature felt the same."
+            };
         </script>
     </head>
     <body onload="printQuestion();">
@@ -24,17 +32,6 @@
             </tr>
         </table>
         <div id="finalResult"></div>
-        <script>
-             function checkAnswer(){
-                var answer = document.getElementById("txtAnswer").value;
-                document.getElementById("Result").innerHTML = "We appreciate your response.";
-                if ("txtAnswer" == 10){
-                    document.getElementById("finalResult").innerHTML = <a href = "newpage.html">Thank you.</a>
-                }
-                else 
-                    document.getElementById("finalResult").innerHTML = "If only the creature felt the same."
-            };
-        </script>
 
     </body>
 </html>
