--- a/Week 8/ifstatements.html
+++ b/Week 8/ifstatements.html
@@ -9,13 +9,13 @@
                 document.getElementById("Question").innerHTML = "Contact:";
             }
             function checkAnswer(){
-                var answer = document.getElementById("txtAnswer").value;
-                document.getElementById("txtAnswer").innerHTML = "We appreciate your response.";
+                var answer = document.getElementById(finalAnswer).value;
+                document.getElementById(txtAnswer).innerHTML = "We appreciate your response.";
                 if ("txtAnswer" == 10){
-                    document.getElementById("finalResult").innerHTML = <a href = "newpage.html">Thank you.</a>
+                    document.getElementById(finalResult).innerHTML = <a href = "newpage.html">Thank you.</a>
                 }
                 else 
-                    document.getElementById("finalResult").innerHTML = "If only the creature felt the same."
+                    document.getElementById(finalResult).innerHTML = "If only the creature felt the same."
             };
         </script>
     </head>
