--- a/Week 8/ifstatements.html
+++ b/Week 8/ifstatements.html
@@ -6,7 +6,7 @@
         <script>
         
             function printQuestion(){
-                document.getElementById("Question").innerHTML = "Contact:";
+                document.getElementById(Question).innerHTML = "Contact:";
             }
             function checkAnswer(){
                 var answer = document.getElementById(finalAnswer).value;
