--- a/Week 8/ifstatements.html
+++ b/Week 8/ifstatements.html
@@ -31,7 +31,7 @@
                 <td colspan="2"><button id="btnSubmit" onclick="checkAnswer();">Submit</button></td>
             </tr>
         </table>
-        I agree to the <a href="terms.html"> Terms and Conditions.</a>
+       <input type="checkbox"> I agree to the <a href="terms.html"> Terms and Conditions.</a>
         <div id="finalResult"></div>
 
     </body>
