--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <title>
         Desk.
@@ -11,6 +12,11 @@
 </head>
 <body>
     <div class="content">
-        
+        <image src="Office Desk.png"></image>
+        <button id="redButton">
+            <image src="Office Button.png"></image>
+        </button>
+        <script src="chat.js"></script>
     </div>
 </body>
+</html>
