--- a/Final Project/office.html
+++ b/Final Project/office.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <title>Office.</title>
     <style>
@@ -13,9 +14,10 @@
 
         <a href="desk.html">
 
-            <image src="Office Chair.png">
-
-            </image></a>
+            <image src="Office Chair.png"></image>
+        </a>
+        <script src="chat.js"></script>
     </div>
    
 </body>
+</html>
