--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -13,9 +13,7 @@
 <body>
     <div class="content">
         <image src="Office Desk.png"></image>
-        <button id="redButton">
-            <image src="Office Button.png"></image>
-        </button>
+            <image src="Office Button.png" alt="Button Image" id="redButton"></image>
         <script src="chat.js"></script>
     </div>
 </body>
