--- a/Final Project/contract.html
+++ b/Final Project/contract.html
@@ -4,19 +4,18 @@
         Contract.
     </title>
     <style>
-        .content {
-          max-width: 1200px;
-          margin: auto;
-        }
 
           /* Hide the button by default */
   #agreeButton {
     display: none;
   }
         </style>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
+  <div class="container">
+  <div class="centered">
+      <div class="image-container">
         <h1>Thank you for your interest in the EGOIST project.</h1>
         <h4>Please read the contents of this page thoroughly before continuing.</h4>
         <p>This experience will contain themes of psychological and/or physical harm. Do not proceed if you are easily disturbed.</p>
@@ -61,6 +60,8 @@
 
 <button id="agreeButton">SUBMIT</button>
 
+      </div>
+      </div>
       </div>
 
       <script>
