--- a/Final Project/office.html
+++ b/Final Project/office.html
@@ -1,23 +1,21 @@
 <html>
 <head>
     <title>Office.</title>
-    <style>
-        .content {
-          max-width: 1200px;
-          margin: auto;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
-        <image src="Office.png"></image>
+    <div class="container">
+        <div class="centered">
+            <div class="image-container">
+        <image src="Office.png" alt="Background Image" class="background-image"></image>
 
-        <a href="desk.html">
-            <image src="Office Chair.png"></image>
-            </a>
+        <button href="desk.html">
+            <image src="Office Chair.png" alt="Overlay Image" class="overlay-image"></image>
+        </button>
 
         <script src="chat.js"></script>
     </div>
-   
+   </div>
+   </div>
 </body>
 </html>
