--- a/Final Project/office.html
+++ b/Final Project/office.html
@@ -9,9 +9,9 @@
             <div class="image-container">
         <image src="Office.png" alt="Background Image" class="background-image"></image>
 
-        <button href="desk.html">
+        <a href="desk.html" class="button">
             <image src="Office Chair.png" alt="Overlay Image" class="overlay-image"></image>
-        </button>
+        </a>
 
         <script src="chat.js"></script>
     </div>
