--- a/Final Project/contract.html
+++ b/Final Project/contract.html
@@ -4,6 +4,10 @@
         Contract.
     </title>
     <style>
+      .content {
+        max-width: 1200px;
+        margin: auto;
+      }
 
           /* Hide the button by default */
   #agreeButton {
@@ -13,9 +17,7 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-  <div class="centered">
-      <div class="image-container">
+      <div class="content">
 
         <h1>Thank you for your interest in the EGOIST project.</h1>
         <h4>Please read the contents of this page thoroughly before continuing.</h4>
@@ -62,8 +64,6 @@
 
 <button id="agreeButton">SUBMIT</button>
 
-      </div>
-      </div>
       </div>
 
       <script>
