--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -8,14 +8,15 @@
 <body>
     <div class="container">
         <div class="centered">
+            <canvas id="canvas" width="1200" height="1200"> </canvas>
             <div class="image-container">
                     <image src="Office Desk.png" alt="Background Image" class="background-image"></image>
                     <button id="redButton">
                         <image src="Office Button.png" alt="Overlay Image" class="overlay-image"></image>
                     </button>
-                    <script src="chat.js"></script>
     </div>
     </div>
     </div>
+    <script src="chat.js"></script>
 </body>
 </html>
