--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
         <div class="centered">
+            <div class="textbox" id="textbox1"></div>
             <canvas id="canvas" width="1200" height="1200"> </canvas>
             <div class="image-container">
                     <image src="Office Desk.png" alt="Background Image" class="background-image"></image>
@@ -17,6 +18,6 @@
     </div>
     </div>
     </div>
-    <script src="chat.js"></script>
+    <script src="cooking.js"></script>
 </body>
 </html>
