--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -12,9 +12,10 @@
             <canvas id="canvas" width="1200" height="1200"> </canvas>
             <div class="image-container">
                     <image src="Office Desk.png" alt="Background Image" class="background-image"></image>
-                    <button id="redButton">
-                        <image src="Office Button.png" alt="Overlay Image" class="overlay-image"></image>
+                    <button onclick="repeatEnding()">
+                        <img src="Office Button.png" alt="Button Image">
                     </button>
+                    
     </div>
     </div>
     </div>
