--- a/Final Project/desk.html
+++ b/Final Project/desk.html
@@ -8,12 +8,11 @@
 <body>
     <div class="container">
         <div class="centered">
-            <div class="textbox" id="textbox1"> ALERT </div>
-            <canvas id="canvas" width="1200" height="1200"> </canvas>
             <div class="image-container">
+                <div class="textbox" id="textbox1"> ALERT </div>
                     <image src="Office Desk.png" alt="Background Image" class="background-image"></image>
-                    <button onclick="repeatEnding()">
-                        <img src="Office Button.png" alt="Button Image">
+                    <button id="redButton" onclick=repeatEnding()>
+                        <img src="Office Button.png" alt="Overlay Image" class="overlay-image">
                     </button>
                     
     </div>
